fix: gmeet - update updateURL

--- a/css/gmeet.user.css
+++ b/css/gmeet.user.css
@@ -1,9 +1,9 @@
 /* ==UserStyle==
 @name        GitHub Dark
 @namespace   maricn
-@version     1.0.2
+@version     1.0.3
 @homepageURL https://github.com/maricn/userstyles
-@updateURL   https://maricn.github.io/userstyles/css/gmeet.user.css
+@updateURL   https://raw.githubusercontent.com/maricn/userstyles/main/css/gmeet.user.css
 @license     BSD-2-Clause
 @author      maricn  
 ==/UserStyle== */
