fix: gmeet - update name of the style

--- a/css/gmeet.user.css
+++ b/css/gmeet.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
-@name        GitHub Dark
+@name        Google Meet - UI fixups
 @namespace   maricn
-@version     1.0.3
+@version     1.0.4
 @homepageURL https://github.com/maricn/userstyles
 @updateURL   https://raw.githubusercontent.com/maricn/userstyles/main/css/gmeet.user.css
 @license     BSD-2-Clause
