--- a/css/medium.user.css
+++ b/css/medium.user.css
@@ -1,21 +1,20 @@
 /* ==UserStyle==
 @name        Medium - Darkness
 @namespace   maricn
-@version     0.2.0
+@version     0.2.1
 @homepageURL https://github.com/maricn/userstyles
 @updateURL   https://raw.githubusercontent.com/maricn/userstyles/main/css/medium.user.css
 @license     BSD-2-Clause
 @author      maricn  
 ==/UserStyle== */
-
-@-moz-document domain("medium.com"), 
-url-prefix("https://posts.specterops.io"), 
-url-prefix("https://hackernoon.com"), 
-url-prefix("https://blog.0day.rocks"), 
-url-prefix("https://blog.discordapp.com"), 
-url-prefix("https://blog.ettic.ca"), 
-url-prefix("https://arlogilbert.com"), 
-url-prefix("https://medium.freecodecamp.org"), 
+@-moz-document domain("medium.com"),
+url-prefix("https://posts.specterops.io"),
+url-prefix("https://hackernoon.com"),
+url-prefix("https://blog.0day.rocks"),
+url-prefix("https://blog.discordapp.com"),
+url-prefix("https://blog.ettic.ca"),
+url-prefix("https://arlogilbert.com"),
+url-prefix("https://medium.freecodecamp.org"),
 url-prefix("https://engineering.salesforce.com")
 {
   /* dark body, light text */
@@ -54,6 +53,9 @@ url-prefix("https://engineering.salesforce.com")
   pre,
   code {
     background-color: #222 !important;
+  }
+  .ek {
+    color: inherit !important;
   }
 
   a {
