--- a/css/atlassian-confluence.user.css
+++ b/css/atlassian-confluence.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Atlassian Confluence - compact
 @namespace   maricn
-@version     0.3.0
+@version     0.4.0
 @homepageURL https://github.com/maricn/userstyles
 @updateURL   https://raw.githubusercontent.com/maricn/userstyles/main/css/atlassian-confluence.user.css
 @license     BSD-2-Clause
@@ -181,11 +181,6 @@
     height: 24px;
   }
 
-  /* remove logo and Atlassian products selection */
-  .css-15i33f0 > * {
-    display: none;
-  }
-
   /* thin out header/nav top banner */
   .css-1s1v97q {
     height: 40px;
@@ -202,5 +197,18 @@
   }
   .css-qrgfm0 {
     min-height: 80px;
+  }
+
+  /* remove top header/navbar altogether:
+   * - use search keyword for the search dialog - currently `confl`
+   * - when necessary, turn off custom css style to access other links
+   */
+  .css-1agqodg,
+  .css-r1dh8j,
+  .css-jm2ar2 {
+    display: none;
+  }
+  .css-kjt1ym {
+    display: block;
   }
 }
