--- a/css/atlassian-confluence.user.css
+++ b/css/atlassian-confluence.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Atlassian Confluence - compact
 @namespace   maricn
-@version     0.4.5
+@version     0.4.6
 @homepageURL https://github.com/maricn/userstyles
 @updateURL   https://raw.githubusercontent.com/maricn/userstyles/main/css/atlassian-confluence.user.css
 @license     BSD-2-Clause
@@ -241,7 +241,8 @@
   /* reduce vertical whitespace in left sidebar */
   .css-m1il2c,
   .css-vqkxcs,
-  .css-evhrrl {
+  .css-evhrrl,
+  .css-rof99k {
     min-height: 18px;
     height: 18px;
   }
