--- a/css/atlassian-confluence.user.css
+++ b/css/atlassian-confluence.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name        Atlassian Confluence - compact
 @namespace   maricn
-@version     0.5.0
+@version     0.6.0
 @homepageURL https://github.com/maricn/userstyles
 @updateURL   https://raw.githubusercontent.com/maricn/userstyles/main/css/atlassian-confluence.user.css
 @license     BSD-2-Clause
@@ -65,13 +65,21 @@
   .css-zaxvqe {
     padding: 0px;
   }
-  .css-9k30bv [data-ds--menu--heading-item] {
+
+  /* remove apps section from left sidebar */
+  .css-9k30bv [data-ds--menu--heading-item],
+  div[data-testid="space-apps"]{
     display: none;
   }
 
   /* reduce vertical whitespace in left sidebar */
-  a[draggable="false"][tabindex="0"] {
+  a[draggable="false"][tabindex="0"],
+  a[data-testid="page-tree-item"] {
     min-height: 18px;
     height: 18px;
   }
+  a.css-1ly4lcb {
+    margin: 0px;
+  }
+
 }
